added timer in the home page and login and signup validation using LS

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                   /></a>
                 </div>
               </div>
-              <p><a href="#">Go to mobile site</a></p>
+              <p><a href="https://m.geekbuying.com/">Go to mobile site</a></p>
             </div>
           </div>
           <div class="top-links">
@@ -173,9 +173,9 @@
             <p>Sign in</p>
             <div class="signin-tooltip">
               <p>Welcome to Geekbuying</p>
-             <button>Join</button>
+             <button id="sign-up">Join</button>
               
-              <button>Sign In</button>
+              <button id="sign-in">Sign In</button>
               <hr />
               <div class="google-icon">
                 <img
@@ -340,9 +340,7 @@
         <div class="right-content">
           <div class="deals-of-the-day">
             <h4>Deal of the Day</h4>
-            <span class="timer-title"
-              >Ends in <span class="timer">00:23:09:24</span></span
-            >
+            <span class="timer-title">Ends in <span class="timer">00:23:09:24</span></span>
             <div class="deals-products">
               <div class="deals-items">
                 <img
